tools/hermes/tests/fixtures/allow_sorry_fallbacks/expected.stderr
  ⚠ unused variable: `cond`
    ╭─[[PROJECT_ROOT]/src/lib.rs:67:36]
 66 │ /// ```
 67 │ pub unsafe fn expects_precondition(cond: bool) {}
    ·                                    ──┬─
    ·                                      ╰── 
 68 │ 
    ╰────
  help: if this is intentional, prefix it with an underscore

  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:22:8]
 21 │ /// ```
 22 │ pub fn missing_user_bound() -> bool {
    ·        ──┬─
    ·          ╰── here
 23 │     true
    ╰────

  ⚠ declaration uses `sorry`
    ╭─[[PROJECT_ROOT]/src/lib.rs:29:8]
 28 │ /// ```
 29 │ pub fn unprovable_is_valid() -> InvalidStruct {
    ·        ──┬─
    ·          ╰── here
 30 │     InvalidStruct { x: 1, y: 2 }
    ╰────

  × Type mismatch
  │   true
  │ has type
  │   Bool
  │ but is expected to have type
  │   InvalidStruct
    ╭─[[PROJECT_ROOT]/src/lib.rs:42:14]
 41 │ /// ensures:
 42 │ ///   ret == true
    ·              ──┬─
    ·                ╰── here
 43 │ /// proof:
    ╰────

  × invalid {...} notation, structure type expected
  │   Post ret_
    ╭─[[PROJECT_ROOT]/src/lib.rs:44:7]
 43 │     /// proof:
 44 │ ╭─▶ ///   -- A deliberately broken explicit proof should NOT emit "declaration uses sorry"
 45 │ │   ///   -- but instead natively fail on the syntax error "unknown tactic".
 46 │ │   ///   exact {
 47 │ │   ///       invalid_tactic
 48 │ ├─▶ ///   }
    · ╰──── here
 49 │     /// ```
    ╰────

  × Tactic `rfl` failed: The left-hand side
  │   true == false
  │ is not definitionally equal to the right-hand side
  │   true
  │ 
  │ ret_ : Unit
  │ h_ret_ : explicit_semantic_failure = ok ret_
  │ ⊢ (true == false) = true
    ╭─[[PROJECT_ROOT]/src/lib.rs:58:7]
 57 │ /// proof (h):
 58 │ ///   rfl
    ·       ─┬─
    ·        ╰── here
 59 │ /// ```
    ╰────

[External Warning] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures<HASH>/NamedBoundsValidationFailuresNamedBoundsValidationFailures<HASH>.lean: unused variable `ret_`

Note: This linter can be disabled with `set_option linter.unusedVariables false`
[External Warning] generated/NamedBoundsValidationFailuresNamedBoundsValidationFailures<HASH>/NamedBoundsValidationFailuresNamedBoundsValidationFailures<HASH>.lean: unused variable `ret_`

Note: This linter can be disabled with `set_option linter.unusedVariables false`
Error: Lean verification failed
